# GraphRouter

./: .gitignore  README.md  create_random_feedback.py  inference.py  inference_withQuery.py  merge_feedback.py  pyproject.toml  requirements.txt
configs/: config.yaml
model/: graph_nn.py  multi_task_graph_router.py
venv_clean/: pyvenv.cfg
